--- a/compose.yaml
+++ b/compose.yaml
@@ -10,27 +10,27 @@ services:
     volumes:
       - ./services/backend:/app
     command: uvicorn src.main:app --reload --host 0.0.0.0 --port 5000
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
 
-#   frontend:
-#     build: ./services/frontend
-#     volumes:
-#       - './services/frontend:/app'
-#       - '/app/node_modules'
-#     ports:
-#       - 8080:8080
+  frontend:
+    build: ./services/frontend
+    volumes:
+      - './services/frontend:/app'
+      - '/app/node_modules'
+    ports:
+      - 8080:8080
 
-#   db:
-#     image: postgres:15.1
-#     expose:
-#       - 5432
-#     environment:
-#       - POSTGRES_USER=hello_fastapi
-#       - POSTGRES_PASSWORD=hello_fastapi
-#       - POSTGRES_DB=hello_fastapi_dev
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data/
+  db:
+    image: postgres:15.1
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=hello_fastapi
+      - POSTGRES_PASSWORD=hello_fastapi
+      - POSTGRES_DB=hello_fastapi_dev
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
