--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 uvicorn = "*"
 fastapi = "*"
+tortoise-orm = "*"
+aerich = "*"
+asyncpg = "*"
 
 
 [tool.poetry.group.dev.dependencies]
